--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: linear-gradient(to left , rgb(252, 157, 173), purple);
+  /* background-image: linear-gradient(to left , rgb(252, 157, 173), purple); */
 }
 
 code {
