--- a/src/component/Users/UsersList.module.css
+++ b/src/component/Users/UsersList.module.css
@@ -18,6 +18,16 @@
     border-radius:10px;
     background-image: linear-gradient(to left , rgb(252, 157, 173), #800080);
   }
+  .userchoice{
+    font-weight:bold;
+    color:#fff;
+  }
+  .postText{
+    color:white;
+  }
+  .postDate{
+    color:white;
+  }
   .choice{
       display:flex;
       align-items:center;
