--- a/src/component/UI/Card.module.css
+++ b/src/component/UI/Card.module.css
@@ -1,7 +1,7 @@
 .card{
-    background-image: linear-gradient(to left , rgb(252, 157, 173), #800080);
-    box-shadow: 0 2px 8px rgba(0,0,0,0.26);
-    border-radius: 10px;
-    margin: 0 auto ;
-    width:400px;
+    background: #2563EB;
+    margin: 0 auto;
+    width: 420px;
+    border-radius:8px;
+    /* height:300px; */
 }
