--- a/src/component/Users/AddUser.module.css
+++ b/src/component/Users/AddUser.module.css
@@ -1,29 +1,69 @@
 a{
     font-size:16px;
 }
-label{
+.heading{
     color:White;
-    margin:5px 0;
+    margin:15px 0;
     font-weight:bold;
+    text-align:center;
+    padding-top:10px;
 }
 form{
-    /* margin: 0 auto ;
-    width:400px; */
-    /* height:150px; */
-    display:flex;
-    flex-direction: column;
-    margin-top:2rem;
-    /* background-image: linear-gradient(to left , rgb(252, 157, 173), #800080); */
+    /* margin-top:2rem; */
     padding:15px;
     border-radius:10px;
-    box-shadow: 0px 20px 10px 0px purple;
+    height:290px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 8px;
 }
 input{
-    width:100%;
-    height:50%;
+    width:90%;
+    /* height:50%; */
     border:none;
     margin-bottom: 10px ;
 }
 input:focus{
     border:none;
 }
+
+.cardTitle{
+    width:27em;
+    padding:.5em;
+    border:transparent;
+    border-radius:.3em;
+    margin:.8em;
+}
+.cardDescription{
+    width:18em;
+    padding:5em;
+    border: transparent;
+    border-radius: .3em;
+    margin-left:.8em;
+}
+.formBottom{
+    display:flex;
+    justify-content: space-between;
+}
+.cardImage,
+.cardCategory{
+    padding:.5em;
+    border: transparent;
+    border-radius: .3em;
+    margin:.8em;
+}
+.btn{
+    font-size:.8em;
+    font-weight:600;
+    color: #2563EB;
+    float:right;
+    padding:1em 3em;
+    /* margin-top:1em; */
+    margin-right:1em;
+    background: #fff;
+    
+    /* border:transparent; */
+    border-radius:.5em;
+    border:1px solid #2563EB;
+    text-transform: capitalize;
+}
+/*******************************************/
