--- a/src/component/Users/UsersList.module.css
+++ b/src/component/Users/UsersList.module.css
@@ -16,13 +16,19 @@
     margin: 0.5rem 0;
     padding: 0.5rem;
     border-radius:10px;
-    background-image: linear-gradient(to left , rgb(252, 157, 173), #800080);
+    /* background-image: linear-gradient(to left , rgb(252, 157, 173), #800080); */
   }
   .userchoice{
     font-weight:bold;
     color:#fff;
   }
   .postText{
+    color:white;
+  }
+  .postContent{
+    color:white;
+  }
+  .postImage{
     color:white;
   }
   .postDate{
@@ -34,3 +40,64 @@
       justify-content: space-between;
       margin-top:.5rem;
   }
+
+
+  /**************/
+
+  
+.cardPost{
+  margin:2em auto;
+  width:400px;
+  background: #FCFCFC;
+border: 1px solid #EDEDED;
+box-sizing: border-box;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+border-radius: 6px;
+}
+.cardPostImage{
+  width:100%;
+  object-fit: cover;
+  border-radius:.3em;
+  padding:0.5em;
+}
+.cardPostText{
+  display:flex;
+  justify-content: space-between;
+  padding:0.5em;
+}
+.cardPostTitle{
+  font-size:1em;
+  font-weight:bold;
+  color:#000;
+  text-transform:capitalize;
+}
+.cardPostDate{
+  font-size:.6em;
+  font-weight:400;
+  color: #B8B8B9;
+}
+.cardDescription{
+  font-size:.8em;
+  font-weight:400;
+  color:#000;
+  line-height:1.3em;
+  justify-content: center;
+  padding:0.5em;
+}
+.cardPostCategory{
+  padding:0.5em;
+}
+
+.cardCategory{
+  font-size:.6em;
+  font-weight:bold;
+  text-transform:capitalize;
+  color:#2563EB;
+  padding:1em;
+  width:100px;
+  background:transparent;
+  border: 2px solid #2563EB;
+  box-sizing: border-box;
+  border-radius: 4px;
+  padding:0.5em;
+}
